Convert ItemStates to record