@@ -45,12 +45,12 @@ class CreateRowGroupFromPrototypeCommandTest {
     ItemState groupState2 = Mockito.mock(ItemState.class);
     when(context.getOriginalItemState(IdUtils.toId("g1"))).thenReturn(Optional.of(groupState1));
     when(context.findPrototype(IdUtils.toId("g1.*"))).thenReturn(Optional.empty());
-    when(states.getItemStates()).thenReturn(Map.of(IdUtils.toId("g1"), groupState2));
+    when(states.itemStates()).thenReturn(Map.of(IdUtils.toId("g1"), groupState2));
     var command = CommandFactory.createRowGroupFromPrototypeCommand(IdUtils.toId("g1.*"));
     ItemStates newStates = command.update(context, states);
     Assertions.assertSame(states, newStates);
 
-    verify(states, times(1)).getItemStates();
+    verify(states, times(1)).itemStates();
     verify(context).getOriginalItemState(IdUtils.toId("g1"));
     verify(context).findPrototype(IdUtils.toId("g1.*"));
     verifyNoMoreInteractions(context, states);
@@ -63,9 +63,9 @@ class CreateRowGroupFromPrototypeCommandTest {
     ItemStates states = Mockito.mock(ItemStates.class);
     ItemState groupState1 = Mockito.mock(ItemState.class);
     ItemState groupState2 = Mockito.mock(ItemState.class);
-    when(states.getErrorStates()).thenReturn(Collections.emptyMap());
-    when(states.getItemStates()).thenReturn(Map.of(IdUtils.toId("g1"), groupState2));
-    when(states.getValueSetStates()).thenReturn(Collections.emptyMap());
+    when(states.errorStates()).thenReturn(Collections.emptyMap());
+    when(states.itemStates()).thenReturn(Map.of(IdUtils.toId("g1"), groupState2));
+    when(states.valueSetStates()).thenReturn(Collections.emptyMap());
     when(context.findPrototype(IdUtils.toId("g1.*"))).thenReturn(Optional.of(new ItemState(IdUtils.toId("g1.*"), null, "text", null, true, null, null, null, null, null)));
     when(context.getOriginalItemState(IdUtils.toId("g1"))).thenReturn(Optional.of(groupState1));
     when(groupState1.getItems()).thenReturn(List.of());
@@ -76,11 +76,11 @@ class CreateRowGroupFromPrototypeCommandTest {
     var command = CommandFactory.createRowGroupFromPrototypeCommand(IdUtils.toId("g1.*"));
     ItemStates newStates = command.update(context, states);
     assertNotSame(states, newStates);
-    assertTrue(newStates.getItemStates().containsKey(IdUtils.toId("g1.0")));
+    assertTrue(newStates.itemStates().containsKey(IdUtils.toId("g1.0")));
 
-    verify(states).getErrorStates();
-    verify(states, times(3)).getItemStates();
-    verify(states).getValueSetStates();
+    verify(states).errorStates();
+    verify(states, times(3)).itemStates();
+    verify(states).valueSetStates();
     verify(context).findPrototype(IdUtils.toId("g1.*"));
     verify(context).getOriginalItemState(IdUtils.toId("g1"));
     verifyNoMoreInteractions(context, states);
